--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,24 @@
-server.port = 8989
+server.port=8989
 
-# DB 연동
-spring.datasource.driver-class-name = oracle.jdbc.driver.OracleDriver
-spring.datasource.url = jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username = booting
-spring.datasource.password = oracle
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=booting
+spring.datasource.password=oracle
 
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.format_sql = true
-logging.level.org.hibernate.type.descriptor.sql = trace
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.database-platform = org.hibernate.dialect.Oracle10gDialect
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
 
-spring.thymeleaf.cache = false
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
+itemImgLocation=c:/shop/item
+uploadPath=file:///c:/shop
+
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
