--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>shopping</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>shopping</name>
-	<description>shopping project for Spring Boot</description>
+	<description>Shopping project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -106,7 +106,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
@@ -123,6 +122,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
 	</build>
 
